# ticket-sheets

./: .gitignore  README.md  config.example.json  event_breakdown.py  parse_ticket_sheet.py  pyproject.toml  server.py  ticket-sheets.service
templates/: header.html  index.html  tally_index.html  tally_sheet.html  ticket_breakdown.html  ticket_table.html  upload.html
ticket_sheets/: breakdown.py  config.py  conversions.py  new_server.py  parse_data.py  tally.py  wsgi.py
ticket_sheets/templates/: config.html  error.html  header.html  tally_sheet.html  ticket_breakdown.html  ticket_table.html  upload.html
ticket_sheets/utils/: __init__.py  conversions.py  extractions.py  formatters.py  internal.py  totals.py
