[project]
name = "ticket_sheets"
description = "A flask website to process CSV dumps from the booking-activities wordpress plugin into printable tables"
authors = [{name = "Will Barber"}]

dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "flask",
    "Flask-Session",
    "pandas ==2.0.3",
]

[project.scripts]
ticket_server = "ticket_sheets.new_server:main"

[project.urls]
Repository = "https://github.com/WillB97/ticket-sheets"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools>=60", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "ticket_sheets/_version.py"

# ### Linting Rules ###
[tool.ruff]
line-length = 95
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warning
    "RUF",  # ruff-specific
    "B006",  # mutable default argument
    "B021",  # f-string docstring
    "COM818",  # warn about implicitly creating a tuple
    # "SLF001",  # warn about accessing private members, these can be noqa'd when necessary
]
preview = true  # Enable preview to get the rest of pycodestyle errors
ignore = [
    "D104",  # Ignoe missing docstring in public package
    "D105",  # Ignore missing docstring in magic method
    "D107",  # Ignore missing docstring in __init__
    "D401",  # Ignore first line of docstring should be in imperative mood
    "D203",  # Ignore 1 blank line required before class docstring
    "D212",  # Ignore Multi-line docstring summary should start at the first line
    "RUF005",  # Allow alternate iterable unpacking
    "RUF015",  # Allow + concatenation
]

[tool.ruff.format]
skip-magic-trailing-comma = true
